# binancebot

./: .gitignore  Cargo.toml  btcusdtbinance.json  output.csv  output1.csv  output2.csv  output3.csv  output4.csv  output5.csv  output6.csv  output7.csv
src/: main.rs
