[package]
name = "binancebot"
version = "0.1.0"
edition = "2021"

[dependencies]
binance = { git = "https://github.com/nilskortner/binance-rs.git" }
chrono = "0.4"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }